fix bag in quote alignment

--- a/src/app/component/quotes/quotes.component.css
+++ b/src/app/component/quotes/quotes.component.css
@@ -5,7 +5,7 @@
     margin: 3%;
     margin-left: 37%;
     width: 30rem;
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.35);
     transition: all 0.3s ease-in-out;
     font-family: 'Lato', sans-serif;
   }
